fix: showing blue section on mobile

--- a/#src/scss/pages/_home.scss
+++ b/#src/scss/pages/_home.scss
@@ -306,7 +306,7 @@
 
   @media screen and (max-width: 560px) {
     //background-color: $secondary-btn-color;
-    padding-left: 0;2
+    padding-left: 0;
     padding-right: 0;
   }
   color: $secondary-font-color-light;
